# beast-boys

./: .gitignore  .gitmodules  CMakeLists.txt  EXAMPLES_BEAST_BOYS_FILES  LICENSE  README.md  beast_boys.cmake  beastboys  install_dependencies.sh  install_dependencies_on_build.sh
Common/: CryptoHelper.cpp  CryptoHelper.h  Json.cpp  Json.h  Logger.h  cacert_data.h
Examples/RestBinance/: CMakeLists.txt  main.cpp
Examples/Streamer/: CMakeLists.txt  main.cpp
Internal/: beastboys.h
RestApi/: RespApi.cpp  RestApi.h
RestApi/Common/: NetworkRequestSettings.cpp  NetworkRequestSettings.h  NetworkTypes.h  RestApiResponse.cpp  RestApiResponse.h
RestApi/Impl/: BoostInternalImpl.cpp  BoostInternalImpl.h  ResponseHelper.cpp  ResponseHelper.h
SocketApi/: Messenger.cpp  Messenger.h  Streamer.cpp  Streamer.h  Websocket.cpp  Websocket.h
SocketApi/Common/: WebsocketResponse.cpp  WebsocketResponse.h  WebsocketTypes.h
SocketApi/Impl/: Connector.cpp  Connector.h  Receiver.cpp  Receiver.h  Resolver.cpp  Resolver.h  SSLHandShaker.cpp  SSLHandShaker.h  Sender.cpp  Sender.h  SharedState.cpp  SharedState.h  Stream.cpp  Stream.h  Streamer.cpp  Streamer.h  TargetHandShaker.cpp  TargetHandShaker.h  WebsocketImpl.cpp  WebsocketImpl.h
